<resources>
    <string name="app_name">Unik</string>
    <string name="app_BD_name">UnizeBD</string>

    <string name="nav_acconunt">Аккаунт</string>
    <string name="nav_sync">Синхронизация</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_selectData">Выбрать дату</string>
    <string name="nav_info">О приложении</string>
    <string name="nav_clock"></string>
    <string name="nav_diary">Выбрать дневник</string>

    <string name="title_activity_settings">Settings</string>

    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="when">Указать дату</string>


    <string name="main_defaultText"> Напишете что-нибудь</string>
    <string name="main_to_be_showed">Показать заметку</string>


    <string name="settings_calendar_edit_title">Список календарей</string>
    <string name="settings_calendar_edit_subtitle">Управление вашими календарями </string>

    <string name="settings_item_edit_title">Расписание календарей</string>
    <string name="settings_item_edit_subtitle">!!!!Настройки расписания календарей </string>

    <string name="settings_backup_title">Резервное копирование</string>
    <string name="settings_backup_subtitle">Импорт и экспорт календарей</string>

    <string name="settings_mainAnimation_title">Анимация диалога</string>
    <string name="settings_mainAnimation_subtitle">Анимировать движения диалогового окна
        (может замедлять работу)</string>

    <string name="settings_showCalendar_title">Показывать календарь</string>
    <string name="settings_showCalendar_subtitle">Отключение этой опции даст больше свободного пространства</string>

    <string name="settings_autoShowKeyboard_title">Авто клавиатура</string>
    <string name="settings_autoShowKeyboard_subtitle">Показывать клавиатуру при выборе элемента</string>

    <!--/////////////////////////////////////////////////////////////////////////////////////////-->

    <string name="settings_calendars">Календари</string>
    <string name="settings_calendars_selected">Выбранный календарь:</string>
    <string name="settings_calendars_New">Добавить календарь</string>
    <string name="settings_calendars_Delete">Удалить</string>
    <string name="settings_calendars_Rename">Переименовать</string>
    <string name="settings_calendars_Crypt">Зашифровать (PRO)</string>
    <string name="settings_calendars_Save">Сделать резервную копию</string>
    <string name="settings_calendars_Share">Поделиться</string>
    <string name="settings_items">Расписание</string>
    <string name="settings_differentWeekTitle">Контроль четности</string>
    <string name="settings_differentWeekSubtitle">Разное расписание для четных и нечетных недель</string>
    <string name="settings_setNameTitle">Название</string>
    <string name="settings_setNameSubtitle">Если ты читаешь это - сообщи мне плз</string>
    <string name="settings_itemCount">Количество элементов</string>
    <string name="settings_itemCountSubtitle">Количество элементов рассписания каждый день</string>
    <string name="settings_saved">Создана копия:\n\r</string>
    <string name="settings_notSaved">Не могу создать копию \n\r Для деталей см. лог</string>
    <string name="settings_fromSD">Открыть...</string>

    <!--/////////////////////////////////////////////////////////////////////////////////////////-->

    <string name="dialog_editItemCount_title">Выберите количество элементов:</string>
    <string name="dialog_editItemCount_subtitle"></string>

    <string name="dialog_addCalendar_title">Введите имя календаря:</string>
    <string name="dialog_addCalendar_subtitle">Будет создан новый календарь, который Вы позже сможете настроить</string>
    <string name="dialog_addCalendar_defaultName">Новый календарь</string>

    <string name="dialog_deleteCalendar_title">Удаление календаря \"</string>
    <string name="dialog_deleteCalendar_subtitle">Восстановить календарь можно только при наличии резервной копии</string>
    <string name="dialog_deleteCalendar_confirm">Я знаю что делаю</string>
    <string name="dialog_deleteCalendar_lastOne">Нельзя удалить единственный календарь</string>

    <string name="dialog_setTime_title">Введите время</string>
    <string name="dialog_setTime_subtitle">Первое поле - начало, второе - конец</string>

    <string name="dialog_renameCalendar_title">Введите новое имя:</string>
    <string name="dialog_renameCalendar_subtitle">Выбранное имя будет установленно для выбранного календаря</string>

    <string name="dialog_editTime_title">Введите новое имя:</string>
    <string name="dialog_editTime_subtitle">Выбранное имя будет установленно для выбранного календаря</string>

    <string name="dialog_editItem_title">Введите данные:</string>
    <string name="dialog_editItem_subtitle">Первое поле - имя элемента \n\r Второе поле - комната</string>
    <string name="dialog_editItem_defaultName">Новое название</string>
    <string name="dialog_editItem_defaultRoom">аудитория</string>

    <string name="settings_edit">Редактировать</string>

    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>


    <!--/////////////////////////////////////////////////////////////////////////////////////////-->

    <string name="settings_label_Calendars">Настройки календарей</string>
    <string name="settings_label_Main">Главный экран</string>
    <string name="settings_label_Appearance">Внешний вид</string>


    <!--/////////////////////////////////////////////////////////////////////////////////////////-->


    <string name="w1">пн</string>
    <string name="w2">вт</string>
    <string name="w3">ср</string>
    <string name="w4">чт</string>
    <string name="w5">пт</string>
    <string name="w6">сб</string>
    <string name="w7">вс</string>

    <string name="week1">числ.</string>
    <string name="week2">знамен.</string>

    <!--/////////////////////////////////////////////////////////////////////////////////////////-->

    <string name="openFileDialog_backSubtitle">На уровень выше</string>
    <string name="openFileDialog_folder">Папка</string>




</resources>
