<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ieefimov.unik.com.ieefimov.unik.SettingsActivity"
    android:orientation="vertical"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    >

    <FrameLayout
        android:id="@+id/kostil_top"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/settings_bar_background">
    </FrameLayout>

    <!--Toolbar-->

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:theme="@style/AppTheme.Bar"
        android:elevation="0dp"
        android:background="@color/settings_bar_background"
        android:layout_height="?actionBarSize"
        android:longClickable="false"
        app:title="@string/nav_settings"
        app:titleTextColor="@color/settings_bar_titleText"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:titleMargin="10dp">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:text="@string/settings_label_Calendars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:background="@color/statusbar"
                    android:textColor="@color/clockSeparator"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textSize="12sp" />

                <FrameLayout
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@color/statusbar"
                    android:layout_gravity="bottom">

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/nav"
                    android:id="@+id/settings_calendarListBtn"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:text="@string/settings_calendar_edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:textColor="@color/settings_button_title"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/settings_calendar_edit_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:textColor="@color/settings_button_subtitle"
                        android:layout_marginStart="20dp"
                        android:textSize="12sp" />



                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/nav"
                    android:id="@+id/settings_backupLayout"
                    android:paddingBottom="5dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:text="@string/settings_backup_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/settings_button_title"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/settings_backup_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/settings_button_subtitle"
                        android:layout_marginStart="20dp"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/nav"
                    android:id="@+id/settings_ItemListBtn"
                    android:paddingBottom="5dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:text="@string/settings_item_edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:textColor="@color/settings_button_title"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/settings_item_edit_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textColor="@color/settings_button_subtitle"
                        android:layout_marginStart="20dp"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <!--////////////////////////////////////////////////////////-->

            <!--////////////////////////////////////////////////////////////-->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:text="@string/settings_label_Main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:background="@color/statusbar"
                    android:textColor="@color/clockSeparator"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:textSize="12sp" />

                <FrameLayout
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@color/statusbar"
                    android:layout_gravity="bottom">

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/nav"
                        android:id="@+id/showAnimationLay"
                        android:layout_weight="1">

                        <TextView
                            android:text="@string/settings_mainAnimation_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/settings_button_title"
                            android:textSize="18sp" />

                        <TextView
                            android:text="@string/settings_mainAnimation_subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/settings_button_subtitle"
                            android:layout_marginStart="20dp"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/animationChk"
                        android:layout_gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="5dp"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/nav"
                        android:id="@+id/autoKeyboardLay"
                        android:layout_weight="1">

                        <TextView
                            android:text="@string/settings_autoShowKeyboard_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/settings_button_title"
                            android:textSize="18sp" />

                        <TextView
                            android:text="@string/settings_autoShowKeyboard_subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/settings_button_subtitle"
                            android:layout_marginStart="20dp"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/autoKeyChk"
                        android:layout_gravity="center" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
